``` feat(note-generator): 添加视频分段处理功能以支持大视频文件
- 实现视频按5分钟分段处理，避免单次请求过大导致的问题
- 新增 _process_video_segments 方法处理多段视频转写和总结
- 添加 SiliconFlow 模型提供商配置到 builtin_providers.json
- 增强 FFmpeg 配置支持完整文件路径和目录路径
- 添加详细的日志记录和错误处理机制
- 实现临时文件和分段视频的自动清理功能
- 限制图像数量防止请求超限问题
- 优化 GPT 请求参数设置最大令牌数

refactor(gitignore): 更新忽略规则以保护数据文件

- 添加上传目录、临时文件和数据库文件到忽略列表
- 防止敏感数据和临时文件被提交到版本控制
```

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ NOTE_OUTPUT_DIR=note_results
 IMAGE_BASE_URL=/static/screenshots
 DATA_DIR=data
 # FFMPEG 配置
-FFMPEG_BIN_PATH=
+FFMPEG_BIN_PATH=D:\ProgramData\anaconda3\envs\video-transcriber\Library\bin\ffmpeg.exe
 
 # transcriber 相关配置
 TRANSCRIBER_TYPE=fast-whisper # fast-whisper/bcut/kuaishou/mlx-whisper(仅Apple平台)/groq
