chore(.gitignore): 更新.gitignore文件以忽略更多临时文件和数据库
- 添加tmpclaude-*-cwd到忽略列表
- 忽略note_results目录及其内容
- 忽略uploads目录及其内容
- 忽略static/screenshots目录及其内容
- 忽略PowerShell脚本文件(*.ps1)
- 忽略SQLite数据库文件(bili_note.db)
- 移除重复的.gitignore条目
```

--- a/.gitignore
+++ b/.gitignore
@@ -322,3 +322,11 @@ cython_debug/
 /backend/config/*
 /BiliNote_frontend/.idea/*
 /BiliNote_frontend/src-tauri/bin/
+tmpclaude-*-cwd
+note_results/*
+uploads/*
+static/screenshots/*
+*.ps1
+.gitignore
+bili_note.db
+.gitignore
